--- a/test.html
+++ b/test.html
@@ -8,13 +8,15 @@ require 'conexao.php';
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Página Inicial - MOVE+</title>
+
 <!-- Link do Bootstrap CSS -->
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <style>
-/* Estilo para o menu lateral */
+
+/* Estilo para o menu */
 body {
-    background-image: url('imgs/Black Abstract Stone Texture Zoom Virtual Background.png');
-}
+    background-color: rgb(34, 34, 34);}
+
 
 .sidenav {
     height: 100%;
@@ -49,10 +51,16 @@ body {
 }
 
 /* Adicionando as cores ao texto */
-#academia-name, #motivational-quote {
+#academia-name {
     color: white;
 }
 
+#motivational-quote {
+    color: white;
+    font-size: 160%;
+    text-align: center;
+
+}
 .logo-img {
     width: 100%;
     height: auto;
